# game-sdl2

./: .gitignore  CMakeLists.txt  README.org  compile_commands.json
apps/: main.cpp
assets/: square.xcf  test.txt
assets/dongeon_tileset/: index.txt
assets/maps/: map.txt
game/: CMakeLists.txt  main.cpp
include/: Collision.hpp  Components.hpp  Game.hpp  GameObject.hpp  LogCmd.hpp  Map.hpp  TextureManager.hpp  Vector2D.hpp
include/ECS/: ColliderComponent.hpp  Components.hpp  ECS.hpp  KeyBoardController.hpp  KeyboardController.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp
scripts/: installer.sh
src/: CMakeLists.txt  Collision.cpp  ECS.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  LogCmd.cpp  LogCmd.hpp  Map.cpp  TextureManager.cpp  TextureManager.hpp  Vector2D.cpp
src/ECS/: ECS.cpp
